finalize API
