# ror/doc/api/srv/api/swagger.json
@@ -80,7 +80,17 @@
 }
         ,
         "403": {
-  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"admin\""
+  "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"admin\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "409": {
+  "description" : "Error occurring when a Category with that title already exists",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
 }
         ,
         "default": {
@@ -189,6 +199,13 @@
         ,
         "403": {
   "description" : "Forbidden. This is returned if the oauth2 scope is anything other than \"admin\"",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        ,
+        "409": {
+  "description" : "Error occurring when a Category with that title already exists",
   "schema" : {
     "$ref" : "#/definitions/Error"
   }
@@ -484,16 +501,30 @@
     
     "get": {
       "summary": "",
-      "description":"Returns a list of videos ordered by created_at. At most 1000 videos will be returned. For an oauth2 scope of &#39;admin&#39;, this includes all videos. For oauth2 scope of &#39;user&#39; or unauthenticated clients, this includes only videos with &#39;viewable&#39; set to true. &lt;b&gt;NOTE&lt;/b&gt;  If the user is unauthenticated or is not the age required for the mpaa_rating, streams will be null.",
+      "description":"Returns a list of videos ordered by created_at. At most 1000 videos will be returned. For an oauth2 scope of &#39;admin&#39;, this includes all videos. For oauth2 scope of &#39;user&#39; or unauthenticated clients, this includes only videos with &#39;viewable&#39; set to true. &lt;b&gt;NOTE&lt;/b&gt;  If the user is unauthenticated and the mpaa_rating is greater than &#39;PG&#39; or is not of the age required for the mpaa_rating, streams will be null.",
       "x-swagger-router-controller": "Videos",
       "tags": ["Videos"],
       "operationId": "videosGet",
       "parameters": [
         {
+  "name" : "category",
+  "in" : "query",
+  "description" : "Filters videos by category",
+  "required" : false,
+  "type" : "string"
+},
+        {
+  "name" : "tags",
+  "in" : "query",
+  "description" : "Filters videos by tags. Comma separated list of tags.",
+  "required" : false,
+  "type" : "string"
+},
+        {
   "name" : "created_before",
   "in" : "query",
   "description" : "Filters videos by created_at date. Videos that have a date before the one specified will be returned.",
-  "required" : true,
+  "required" : false,
   "type" : "string",
   "format" : "date-time"
 },
@@ -501,16 +532,9 @@
   "name" : "created_after",
   "in" : "query",
   "description" : "Filters videos by created_at date. Videos that have a date after the one specified will be returned.",
-  "required" : true,
+  "required" : false,
   "type" : "string",
   "format" : "date-time"
-},
-        {
-  "name" : "category",
-  "in" : "query",
-  "description" : "Filters videos by category",
-  "required" : false,
-  "type" : "string"
 }
         
       ],
@@ -601,7 +625,7 @@
       ],
       "responses": {
         "204": {
-  "description" : "Stream has been accepted for transcoding"
+  "description" : "Video has been liked"
 }
         ,
         "403": {
@@ -639,8 +663,8 @@
         
       ],
       "responses": {
-        "200": {
-  "description" : "Stream has been accepted for transcoding"
+        "204": {
+  "description" : "Like has been removed"
 }
         ,
         "403": {
@@ -663,14 +687,50 @@
     
   } ,
   
-  "/videos/{video-id}/stream": {
+  "/videos/{video-id}/hero_image": {
+    
+    "post": {
+      "summary": "",
+      "description":"Creates or updates the hero image for a video. This is a multipart/form-data POST.",
+      "x-swagger-router-controller": "Videos",
+      "tags": ["Videos"],
+      "operationId": "videosVideoIdHeroImagePost",
+      "parameters": [
+        {
+  "name" : "video-id",
+  "in" : "path",
+  "description" : "Video ID",
+  "required" : true,
+  "type" : "integer"
+}
+        
+      ],
+      "responses": {
+        "202": {
+  "description" : "Image has been created or updated"
+}
+        ,
+        "default": {
+  "description" : "Unexpected error",
+  "schema" : {
+    "$ref" : "#/definitions/Error"
+  }
+}
+        
+        
+      }
+    } 
+    
+  } ,
+  
+  "/videos/{video-id}/streams": {
     
     "post": {
       "summary": "",
       "description":"Creates or updates a set of video streams and initiates transcoding for those stream. &lt;b&gt;NOTE&lt;/b&gt; The video specified by the &#39;raw_video_key&#39; must be present in S3. Usually, this matches the &#39;key&#39; returned by */videos/{video-id}/stream_transcode_request*. &lt;b&gt;NOTE&lt;/b&gt; If stream of the specified type already exists, the stream&#39;s status must be either &#39;complete&#39;, &#39;canceled&#39;, or &#39;error&#39; for the update to succeed",
       "x-swagger-router-controller": "Videos",
       "tags": ["Videos"],
-      "operationId": "videosVideoIdStreamPost",
+      "operationId": "videosVideoIdStreamsPost",
       "parameters": [
         {
   "in" : "body",
@@ -721,47 +781,11 @@
     
   } ,
   
-  "/videos/{video-id}/hero_image": {
-    
-    "post": {
-      "summary": "",
-      "description":"Creates or updates the hero image for a video",
-      "x-swagger-router-controller": "Videos",
-      "tags": ["Videos"],
-      "operationId": "videosVideoIdHeroImagePost",
-      "parameters": [
-        {
-  "name" : "video-id",
-  "in" : "path",
-  "description" : "Video ID",
-  "required" : true,
-  "type" : "integer"
-}
-        
-      ],
-      "responses": {
-        "202": {
-  "description" : "Image has been created or updated"
-}
-        ,
-        "default": {
-  "description" : "Unexpected error",
-  "schema" : {
-    "$ref" : "#/definitions/Error"
-  }
-}
-        
-        
-      }
-    } 
-    
-  } ,
-  
   "/videos/{video-id}": {
     
     "get": {
       "summary": "",
-      "description":"Returns a video for the given ID. If the user is unauthenticated or is not the age required for the mpaa_rating, streams will be null.",
+      "description":"Returns a video for the given ID. If the user is unauthenticated and the mpaa_rating is greater than PG or is not the age required for the mpaa_rating, streams will be null.",
       "x-swagger-router-controller": "Videos",
       "tags": ["Videos"],
       "operationId": "videosVideoIdGet",
@@ -891,6 +915,7 @@
   
   }, "definitions": {
   "Video": {
+  "required" : [ "category_id", "description", "mpaa_rating", "title" ],
   "properties" : {
     "id" : {
       "type" : "integer",
@@ -928,7 +953,7 @@
     },
     "viewable" : {
       "type" : "boolean",
-      "description" : "Whether a video is viewable."
+      "description" : "Whether a video is viewable. This property is only visible to clients with an oauth2 scope of 'admin'"
     },
     "tags" : {
       "type" : "array",
@@ -954,11 +979,12 @@
     }
   }
 },"Category": {
+  "required" : [ "title" ],
   "properties" : {
     "id" : {
       "type" : "integer",
       "format" : "int32",
-      "description" : "Unique identifier representing a specific video",
+      "description" : "Unique identifier representing a specific category",
       "readOnly" : true
     },
     "title" : {
@@ -967,6 +993,7 @@
     }
   }
 },"Stream": {
+  "required" : [ "link", "transcode_status", "type" ],
   "properties" : {
     "link" : {
       "type" : "string",
@@ -985,6 +1012,7 @@
     }
   }
 },"User": {
+  "required" : [ "birthday", "email", "password" ],
   "properties" : {
     "id" : {
       "type" : "integer",
@@ -1003,7 +1031,7 @@
     "birthday" : {
       "type" : "string",
       "format" : "date-time",
-      "description" : "Birthday of user. Timezone is UTC"
+      "description" : "Birthday of user. <a href=\"http://xml2rfc.ietf.org/public/rfc/html/rfc3339.html#anchor14\">ISO-8061 date-time</a>. Timezone is UTC"
     }
   }
 },"Error": {
@@ -1044,6 +1072,7 @@
     }
   }
 },"body": {
+  "required" : [ "category_id", "description", "mpaa_rating", "title" ],
   "properties" : {
     "title" : {
       "type" : "string",
@@ -1114,20 +1143,6 @@
       }
     }
   }
-},"body_1": {
-  "properties" : {
-    "key" : {
-      "type" : "string",
-      "description" : "S3 bucket key for raw video."
-    },
-    "types" : {
-      "type" : "array",
-      "description" : "Target stream types. Only 'hls' and 'mp4' are supported.",
-      "items" : {
-        "type" : "string"
-      }
-    }
-  }
 },"inline_response_200_3": {
   "properties" : {
     "aws_access_key_id" : {
@@ -1149,6 +1164,20 @@
     "policy" : {
       "type" : "string",
       "description" : "Upload policy"
+    }
+  }
+},"body_1": {
+  "properties" : {
+    "key" : {
+      "type" : "string",
+      "description" : "S3 bucket key for raw video."
+    },
+    "types" : {
+      "type" : "array",
+      "description" : "Target stream types. Only 'hls' and 'mp4' are supported.",
+      "items" : {
+        "type" : "string"
+      }
     }
   }
 }
